# EmotivNAO

./: .gitignore  Controlling The Nao Robot Using The Emotiv Epoc.docx  LICENSE  README.md
emotiv-sdk/: CHANGELOG.md  EULA  README.md  SDK_LICENSE  SDK_LICENSE_ACTIVATION.md
emotiv-sdk/doc/: Connecting on Ubuntu and Debian.md  How to build C++ examples with Cmake.txt  User Manual for Example C++.txt
emotiv-sdk/examples_basic/: Build_example_MacOS.txt
emotiv-sdk/examples_basic/Android/FFTSample/: local.properties
emotiv-sdk/examples_basic/Android/FacialExpression/: import-summary.txt  local.properties
emotiv-sdk/examples_basic/Android/MentalCommand/: import-summary.txt  local.properties
emotiv-sdk/examples_basic/Android/ProfileCloudExample/: import-summary.txt  local.properties
emotiv-sdk/examples_basic/Android/motiondatalogger/: local.properties
emotiv-sdk/examples_basic/C#/: DotNetEmotivSDK.sln
emotiv-sdk/examples_basic/C#/AverageBandPowers/: AverageBandPowers.csproj  Program.cs
emotiv-sdk/examples_basic/C#/DotNetEmotivSDK/: DotNetEmotivSDK.csproj
emotiv-sdk/examples_basic/C#/EmoStateLogger/: EmoStateLogger.csproj  Program.cs
emotiv-sdk/examples_basic/C#/HeadsetInformationLogger/: HeadsetInformationLogger.csproj  Program.cs
emotiv-sdk/examples_basic/C#/MentalCommandWithCloudProfile/: MentalCommandWithCloudProfile.csproj  Program.cs
emotiv-sdk/examples_basic/C#/MotionDataLogger/: MotionDataLogger.csproj  Program.cs
emotiv-sdk/examples_basic/C#/MultiDongles/: MultiDongles.csproj  Program.cs
emotiv-sdk/examples_basic/C#/SavingAndLoadingProfileCloud/: Program.cs  SavingAndLoadingProfileCloud.csproj
emotiv-sdk/examples_basic/C++/: EmoTutorials.sln
emotiv-sdk/examples_basic/C++/AverageBandPowers/: AverageBandPowers.vcxproj  CMakeLists.txt  main.cpp
emotiv-sdk/examples_basic/C++/EmoStateLogger/: CMakeLists.txt  EmoStateLogger.vcxproj  main.cpp
emotiv-sdk/examples_basic/C++/FacialExpressionDemo/: CMakeLists.txt  FacialExpressionControl.cpp  FacialExpressionDemo.cpp  FacialExpressionDemo.vcxproj  Socket.cpp  Socket.h
emotiv-sdk/examples_basic/C++/GyroData/: CMakeLists.txt  GyroData.vcxproj  main.cpp
emotiv-sdk/examples_basic/C++/HeadsetInformationLogger/: CMakeLists.txt  HeadsetInformationLogger.vcxproj  main.cpp
emotiv-sdk/examples_basic/C++/MentalCommandDemo/: CMakeLists.txt  MentalCommandDemo.cpp  MentalCommandDemo.vcxproj  Socket.cpp  Socket.h
emotiv-sdk/examples_basic/C++/MentalCommandWithCloudProfile/: CMakeLists.txt  MentalCommandWithCloudProfile.cpp  MentalCommandWithCloudProfile.vcxproj
emotiv-sdk/examples_basic/C++/MentalCommandWithLocalProfile/: CMakeLists.txt  MentalCommandWithLocalProfile.cpp  MentalCommandWithLocalProfile.vcxproj
emotiv-sdk/examples_basic/C++/MotionDataLogger/: CMakeLists.txt  MotionDataLogger.vcxproj  main.cpp  motionData.csv
emotiv-sdk/examples_basic/C++/MultiDongleConnection/: CMakeLists.txt  MultiDongleConnection.vcxproj  main.cpp
emotiv-sdk/examples_basic/C++/NewDemo/: NewDemo.vcxproj  NewDemo.vcxproj.filters
emotiv-sdk/examples_basic/C++/SavingAndLoadingProfileCloud/: CMakeLists.txt  SavingAndLoadingProfileCloud.vcxproj  main.cpp
emotiv-sdk/examples_basic/C++/TestDemo/: TestDemo.cpp  TestDemo.vcxproj
emotiv-sdk/examples_basic/C++/qt-project/: AverageBandPowers.pro  EmoStateLogger.pro  FacialExpressionDemo.pro  GyroData.pro  HeadsetInformationLogger.pro  MentalCommandDemo.pro  MentalCommandWithCloudProfile.pro  MentalCommandWithLocalProfile.pro  MotionDataLogger.pro  MultiDongleConnection.pro  SavingAndLoadingProfileCloud.pro  deployment.pri  examples.pro
emotiv-sdk/examples_basic/Matlab/: facialexpression.m  showEdkApiLists.m
emotiv-sdk/examples_basic/Python/: AverageBandPowers.py  HeadsetInformationLogger.py  MentalCommandWithCloudProfile.py  MotionDataLogger.py  MultiDongleConnection.py  SavingAndLoadingProfileCloud.py  emostate_logger.py
emotiv-sdk/examples_basic/Python/Arduino/: README.md  arduinoCom.py
emotiv-sdk/examples_basic/Unity/: .gitignore  README.txt
emotiv-sdk/examples_basic/Unity/RollingBall/: Assembly-CSharp.csproj  RollingBall.sln  RollingBall.userprefs
emotiv-sdk/examples_extra_prime/C#/: DotNetEmotivSDK.sln
emotiv-sdk/examples_extra_prime/C#/ActivateLicense/: ActivateLicense.cs  ActivateLicense.csproj
emotiv-sdk/examples_extra_prime/C#/DotNetEmotivSDK/: EEGData.cs  EmoEngine.cs
emotiv-sdk/examples_extra_prime/C#/EEG_Data_Logger/: EEG_Data_Logger.cs  EEG_Data_Logger.csproj
emotiv-sdk/examples_extra_prime/C#/PerformanceMetric/: PerformanceMetric.cs  PerformanceMetric.csproj
emotiv-sdk/examples_extra_prime/C++/: EmoTutorials.sln
emotiv-sdk/examples_extra_prime/C++/ActivateLicense/: ActivateLicense.cpp  ActivateLicense.vcxproj  CMakeLists.txt
emotiv-sdk/examples_extra_prime/C++/EEGLogger/: CMakeLists.txt  EEGLogger.vcxproj  main.cpp
emotiv-sdk/examples_extra_prime/C++/MultiDongleEEGLogger/: CMakeLists.txt  MultiDongleEEGLogger.vcxproj  main.cpp
emotiv-sdk/examples_extra_prime/C++/PerformanceMetricsDemo/: CMakeLists.txt  PerformanceMetricsDemo.cpp  PerformanceMetricsDemo.vcxproj
emotiv-sdk/examples_extra_prime/Matlab/: DataMotionLogger.m  PerformanceMetricsDemo.m  README.doc  activelicense.m  eeglogger.m
emotiv-sdk/examples_extra_prime/Python/: .project  ActivateLicense.py  eeg_logger.py
naopy/: GyroNAOHead.py  NAOClient.py  NAOSay.py
naopy/NAOPostures/: Crouch.py
src/Demo/: Demo.sln
src/Demo/Demo/: Demo.vcxproj
src/EmotivNAO/: EmotivNAO.VC.VC.opendb  EmotivNAO.sln
src/EmotivNAO/EmotivNAO/: EmotivNAO.vcxproj  emostate_logger.csv  main.cpp
src/EmotivNAO/MentalCommandStoring/: MentalCommandStoring.vcxproj  MentalCommandStoring.vcxproj.filters  MentalCommands.cpp
src/EmotivNAO/WinSockClient/: Client.cpp  WinSockClient.vcxproj  WinSockClient.vcxproj.filters
src/EmotivNAO/WinSockServer/: FacialCommands.cpp  FacialCommands.h  FacialExpression.cpp  FacialExpression.h  Gyro.csv  GyroData.cpp  GyroData.h  MentalCommands.cpp  MentalCommands.h  Server.cpp  WinSockServer.aps  WinSockServer.vcxproj  WinSockServer.vcxproj.filters  resource.h
(+152 files in other folders)
